--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
       <div class="row">
         <div class="col-12 col-md-4">
-          <i class="fas fa-camera fa-3x my-3"></i>
-          <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+          <i class="fas fa-handshake fa-3x my-3"></i>
+          <h3 class="my-3 fw-bold">Abogada</h3>
           <p class="my-3">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
