--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
             <li class="nav-item">
-              <a class="nav-link" href="#">Acerca de mi</a>
+              <a class="nav-link .text-primary" href="#">Acerca de mi</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Trabajos</a>
@@ -62,17 +62,19 @@
     <header id="Hero-Section" class="text-light text-end py-5 mt-5">
       <div class="container">
         <div class="ms-auto col-12 col-md-7">
-          <h1 class="display-1 fw-bold my-5">
+          <h1 class="display-1 fw-bold my-5 text-secondary">
             Curriculum <br />
             desafio git
           </h1>
-          <p class="my-5">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
-            accusamus iusto quibusdam dignissimos labore sequi. Cupiditate
-            reiciendis eius dolore, illum adipisci harum voluptas iste mollitia
-            inventore provident labore voluptatum nemo.
+          <p class="pt-10 text-black">
+            <strong
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
+              accusamus iusto quibusdam dignissimos labore sequi. Cupiditate
+              reiciendis eius dolore, illum adipisci harum voluptas iste
+              mollitia inventore provident labore voluptatum nemo.</strong
+            >
           </p>
-          <div class="mb-5 pb-5">
+          <div class="mb-2 pb-2">
             <button class="btn btn-lg btn-outline-info text-light me-4">
               Trabajos
             </button>
