--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <header id="Hero-Section" class="text-light text-end py-5 mt-5">
       <div class="container">
         <div class="ms-auto col-12 col-md-7">
-          <h1 class="display-1 fw-bold my-5 text-secondary">
+          <h1 class="display-1 fw-bold my-5 text-primary">
             Curriculum <br />
             desafio git
           </h1>
